2005-07-01  Esteban Sanchez  <esteban@steve-0.com>

        * gweather.h (struct _GWeatherApplet): Added pref_find_entry and
          pref_find_next_btn
	  
        * gweather-pref.c: (gweather_pref_create): Added a find bar to the
	  location page. Fixed bug #305518

2005-07-01  Davyd Madeley  <davyd@madeley.id.au>

	* Locations.xml.in: Locations Loving. Closes at least #306265.

2005-06-26  Máirín Duffy  <duffy@redhat.com>

	* Locations.xml.in: Restore unintentionally reverted UK 
	zone changes. Add additional UK zones (#309032).

2005-06-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* Locations.xml.in: Nepal is in Asia, not Africa.
	Fixed bug #308269.

2005-06-09  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* Locations.xml.in: Rearrange locations in Thailand by cities.
	  Patch submitted via bug #160163.

2005-06-09  Kjartan Maraas  <kmaraas@gnome.org>

	* gweather-applet.c:
	* main.c: (gweather_applet_new):
	* weather.c:
	* weather.h: Remove gnome-config cruft. Closes bug #172028.

2005-05-31  Davyd Madeley  <davyd@madeley.id.au>

	* gweather-pref.c:
	* gweather.h:
	* weather.c:
	* weather.h: Added support for the Beaufort wind speed scale. See
	  http://www.zetnet.co.uk/sigs/weather/Met_Codes/beaufort.htm.
	  Closes bug #305808.

2005-05-27  Christian Rose  <menthos@menthos.com>

	* Locations.xml.in: Moved some German locations into the
	correct places.

2005-05-23  Christian Rose  <menthos@menthos.com>

	* Locations.xml.in: Added some more translator
	comments, explaining what country the names come from.

2005-04-10  Christian Rose  <menthos@menthos.com>

	* Locations.xml.in: Added some more translator
	comments, explaining what country the names come from.

2005-04-08  Christian Rose  <menthos@menthos.com>

	* Locations.xml.in: Added some more translator
	comments, explaining what country the names come from.

2005-04-07  Abel Cheung  <maddog@linuxhall.org>

	* Locations.xml.in: Removed some duplicate stations and